@@ -1,3 +1,4 @@
+* Manage deletable and writable state
 * Support e-mail template
 * Always encode CSV export in UTF-8
 * Use tempusdominus and Popper for date time picker
